# memexServer

./: .gitignore  docker-compose.yml  dockerfile.yml  pyproject.toml  rake_dockerfile.yml  requirements.txt  setup.cfg
src/memexIndexer/api/: client.py  docker_entrypoint.py  main.py  rake_client.py  schemas.py  server.py
src/memexIndexer/api/routers/bookmarks/: router.py  schemas.py
src/memexIndexer/api/routers/books/: router.py  schemas.py
src/memexIndexer/api/routers/contacts/: router.py  schemas.py
src/memexIndexer/api/routers/emails/: router.py  schemas.py
src/memexIndexer/api/routers/movies/: router.py  schemas.py
src/memexIndexer/api/routers/notes/: router.py  schemas.py
src/memexIndexer/api/routers/scraped_data/: router.py  schemas.py
src/memexIndexer/api/routers/time_capsules/: router.py  schemas.py
src/memexIndexer/api/routers/todo/: router.py  schemas.py
src/memexIndexer/config/: api_env.py
src/memexIndexer/indexer/: schemas.py  utils.py
src/memexIndexer/utils/: enums.py  errors.py  http.py
tests/: test_api.py  test_indexer.py
